test/errors/type/list/clear.yasl
mt.lookup([], .clear)(1)
